--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,5 +3,7 @@ body {
   background: linear-gradient(0deg, rgba(13,8,93,1) 0%, rgba(11,7,92,1) 38%, rgba(83,3,94,1) 100%);
   height: 100vh;
 }
-
-
+.card-content {
+  max-width: 410px;
+  background-color: beige;
+}
