--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,49 @@
+/* backgrounds */
 body {
-  background: rgb(13,8,93);
   background: linear-gradient(0deg, rgba(13,8,93,1) 0%, rgba(11,7,92,1) 38%, rgba(83,3,94,1) 100%);
   height: 100vh;
+  background-attachment: fixed;
 }
-.card-content {
-  max-width: 410px;
-  background-color: beige;
+
+.card-content .card{
+  border-radius: 10px;
+  background-color: rgba(230, 255, 255, 0.7);
+  color: rgba(13,8,93,1);
+}
+
+/* texts */
+h5{
+  margin-top:3%;
+  margin-bottom: 3%;
+}
+
+.card-title{
+  margin-bottom: 2.25rem;
+  font-weight: 400;
+  font-size: 2rem;
+}
+
+label, .label{
+  opacity: 0.85;
+  color: rgb(10,10,10);
+}
+
+/* Buttons */
+.button{
+  background-color: #371140;
+  border-color: #371140;
+}
+.button:hover{
+  background-color: #52035e;
+}
+.add{
+  font-size: small;
+}
+.smol{
+  display: flex;
+  align-items: flex-end;
+}
+
+.submit{
+  margin-top: 5%;
 }
