--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 /* backgrounds */
 body {
-  background: linear-gradient(0deg, rgba(13,8,93,1) 0%, rgba(11,7,92,1) 38%, rgba(83,3,94,1) 100%);
+  background: linear-gradient(0deg, #050505 0%,#260c68  100%);
   height: 100vh;
   background-attachment: fixed;
 }
@@ -28,6 +28,10 @@ label, .label{
   color: rgb(10,10,10);
 }
 
+.input{
+  margin-bottom: 0.5%;
+}
+
 /* Buttons */
 .button{
   background-color: #371140;
@@ -46,4 +50,12 @@ label, .label{
 
 .submit{
   margin-top: 5%;
+}
+
+/* images */
+.arrow {
+  width: 40px;
+  z-index: 2;
+  margin-top: -1%;
+  margin-bottom: -1%;
 }
